--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
+    "save": "git add . && git commit -am 'ok' && git push",
     "client": "cd ../ && cd frontend && npm start"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "circular-json": "^0.5.9",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "mongoose-unique-validator": "^3.1.0",
     "react-icons": "^4.4.0"
