--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "circular-json": "^0.5.9",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
