--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "save": "git add . && git commit -am 'ok' && git push",
-    "client": "cd ../ && cd frontend && npm start"
+    "client": "cd ../ && cd frontend && npm start",
+    "build": "cd ../ && cd frontend && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +18,13 @@
     "body-parser": "^1.20.0",
     "circular-json": "^0.5.9",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "mongoose-unique-validator": "^3.1.0",
+    "path": "^0.12.7",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   }
