--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd backend && node server.js",
     "build": "cd frontend && npm run build"
   },
