--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5001/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd backend && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
